--- a/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.html
+++ b/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.html
@@ -9,25 +9,25 @@
     </div>
     <div class='form-square'>
         <div class='form-square-background'>
-            <form class='form'>
+            <form [formGroup]="datosMecanico" class='form'>
                 <div class='group1'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" formControlName="nombre_apellido" required><span class='bar'></span>
                     <label for=''>NOMBRE Y APELLIDO</label>
                 </div>
                 <div class='group2'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" formControlName="cedula" required><span class='bar'></span>
                     <label for=''>CEDULA DE IDENTIDAD</label>
                 </div>
                 <div class='group3'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" formControlName="fecha_nacimiento" required><span class='bar'></span>
                     <label for=''>FECHA DE NACIMIENTO</label>
                 </div>
                 <div class='group4'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" formControlName="lugar_residencia" required><span class='bar'></span>
                     <label for=''>LUGAR DE RESIDENCIA</label>
                 </div>
                 <div class='group4'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" formControlName="numero_telefono" required><span class='bar'></span>
                     <label for=''>NUMERO DE TELÉFONO</label>
                 </div>
                 <button class='send-button' type='submit'>GUARDAR</button>
