--- a/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.html
+++ b/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.html
@@ -32,7 +32,7 @@
                         <label for=''>NÚMERO DE TELÉFONO</label>
                     </div>
                     <div>
-                        <button (onclick)="modificarInfoUsuario()">GUARDAR CAMBIOS</button>
+                        <button (click)="modificarInfoUsuario(); saveUser()">GUARDAR CAMBIOS</button>
                         <button>EDITAR</button>
                     </div> 
                 </form>
