--- a/src/app/pages/perfilCliente/vista-registro-vehiculo1/vista-registro-vehiculo1.component.html
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo1/vista-registro-vehiculo1.component.html
@@ -36,7 +36,7 @@
                         <label for=''>FECHA</label>
                     </div>
                     <div>
-                        <button>GUARDAR CAMBIOS</button>
+                        <button (click)="saveUser()">GUARDAR CAMBIOS</button>
                         <button>DESACTIVAR</button>
                     </div>
                 </form>
@@ -52,7 +52,7 @@
                 <img [src]="url" alt="fotovehiculo">
             </div>
             <div class="btn1">
-                <button [disabled]="clicked" (click)="clicked = true; pruebas();">SOLICITAR CITA</button>
+                <button [disabled]="clicked" (click)="clicked = true;">SOLICITAR CITA</button>
             </div> 
             <div class="btn2">
                 <button [routerLink]="['/vista-registrar-vehiculo2']">VEHÍCULO 2</button>
